# empty-maya-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buildWindowsDebug.bat  buildWindowsRelease.bat  install.mel  pluginMain.cpp  pluginName.mod
scripts/: coopLib.py  coopSetup.py
